	LabelledPortrayal3D.updateSwitch() and CircledPortrayal3D.updateSwitch() made private.
	Bugs in LabelledPortrayal3D which were making the label too tiny
	LabelledPortayal3D now makes labels exactly the same size as SimpleEdgePortrayal3D.
	Modifications to LabelledPortrayal3D's constructors: scale no longer exists	
	GullCG made public
	Added missing copyright declarations
	Fixed bug in Rectangle2D where color wasn't set if precise was used.  Thanks to 
		Joerg Hoehne <hoehne@gmail.com>
	Moved reloading of precise rectangles and ovals to within the precise if-statement;
		a very minor efficiency improvement.
	PngEncoder renamed to PNGEncoder
	All variables in SimpleColorMap made private
	Changes changeColor(...) calls to setColor(...) in the various SeriesAttributes
	LabelledList.setBackground(...) removed.
	Added DisclosurePanel.setDisclosed(...) and isDisclosed()
	Multiple variables in NumberTextField made private.  This may break some people's code.
	NumberTextField.currentValue made protected  This may break some people's code.
	Added NumberTextField.setInitialValue(...), getInitialValue(), and getField()
	NumberTextField.listener and focusAdapter made private
	NumberTextField.iconFor(...) made private
	NumberTextField.setValues(...) deleted
	Numerous PropertyField public variables made private
	Added PropertyField.setEnabled(...) to be consistent with NumberTextField
	PropertyField.setValues(...) made private
	Deleted MiniHistogram.makeBucketPositions(...)
	Made MiniHistogram.minimum(...) and maximum(...) private	
	Added MiniHistogram.makeBuckets(...) variant
	DialogToolip is deleted and folded back into ToolTipBehavior
	WordWrap examples trimmed
	AbstractScrollable.getPreferredScrollableViewportSize() now doesn't call super
	Various PNGEncoder protected variables and methods made private
	PNGEncoder.ENCODE_ALPHA, NO_ALPHA, and FILTER_LAST constants deleted
	PNGEncoder.encodeBytes(alpha) method deleted